# gnome-terminal

./: configure.ac  meson.build
po/: en_GB.po
src/: meson.build  terminal-screen.c  terminal-window.c  terminal.xml
